--- a/estilo.css
+++ b/estilo.css
@@ -1,29 +1,8 @@
-img#logoUpe{
-    position: absolute;
-    height: 350px;
-    width: 350px;
-       
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300;1,400&display=swap');
+
+
+body{
+    font-family: 'Roboto', sans-serif;
 }
 
-img#logoVest{
-    width: 100%;
-    height: 100%;
-    filter:alpha(opacity=50);
-    filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0.5);
-    opacity:.50;
-    position: absolute;
-
-}
-
-.container{
-    margin: 50px 0px 0px 450px;
-    position: relative;
-    z-index:9999;
-    float: left;
-}
-
-.img-colegio{
-    width: 20%;
-    height: 20%;
-}
 
